# parallel-gradient-descent

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: benchmark.py  gen_data.py  requirements.txt
demo/notebooks/: demo.ipynb
demo/src/: regression.py
demo/src/benchmark/: parser.py  utils.py
demo/src/gen_data/: parser.py  regression.py
examples/: benchmark_config.json  config.cfg  parallel_config.cfg  serial_config.cfg
include/gradient_descent/: arg_parser.hpp  core.hpp  early_stopping.hpp  interface.hpp  parallel_sgd.hpp  regression.hpp  scaler.hpp  sgd.hpp  thread_pool.hpp  types.hpp  utils.hpp
src/: arg_parser.cpp  arg_parser.hpp  core.cpp  early_stopping.cpp  interface.cpp  io.hpp  main.cpp  parallel_sgd.cpp  profiler.hpp  regression.cpp  scaler.cpp  sgd.cpp  thread_pool.cpp  utils.cpp
tools/: gen_data.py
tools/src/: parser.py  regression.py
